# PP

./: .coverage  README.md  add_models.py  alembic.ini  app.py  conftest.py  controler.py  core.py  createTables.sql  main.py  models.py  openapi (1).yaml  pyproject.toml  yourapp.py  yourapp.wsgi
alembic/: env.py
alembic/versions/: 3e4544ffe2f3_.py  7482d7a2c2b8_.py
test/: test_bank.py  test_credits.py  test_transactions.py  test_user.py
