[tool.poetry]
name = "dev"
version = "0.1.0"
description = "dev environment"
authors = ["VolodymyrVoloshyn02 <volodimirvoloshin02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
mod-wsgi = "^4.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
